# Spackit

./: PKGBUILD  pyproject.toml  setup_aliases.sh  spackit-0.1.0-1-any.pkg.tar.zst
pkg/spackit/: .BUILDINFO  .MTREE  .PKGINFO
src/Spackit-0.1.0/src/spackit.egg-info/: top_level.txt
src/spackit/: main.py
src/spackit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
