[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "spackit"
version = "0.1.0"
description = "Herramienta personalizada de Jeicob para Arch Linux"
authors = [{name = "Jeicob_root", email = "jeicobtavarezdiaz@gmail.com"}]
dependencies = []

[project.scripts]
spackit = "spackit.main:run"
